--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -3,12 +3,23 @@
   padding: 20px 0;
 }
 
+.dictionary__titleInput {
+  text-align: start;
+  font-size: 18px;
+}
+
+.Dictionary input {
+  background-color: var(--light-background);
+}
+
 .btn-searching {
   background-color: var(--primary-color);
-  color: white;
+  color: var(--light-background);
+  border-color: var(--primary-color);
 }
 
 .dictionary-input:focus {
   border-color: var(--primary-color);
+  background-color: var(--light-background);
   box-shadow: none;
 }
