--- a/src/Meaning.css
+++ b/src/Meaning.css
@@ -3,8 +3,14 @@
   margin: 0;
 }
 
+.Meaning__definitionCheck {
+  color: var(--font-color);
+  font-size: 12px;
+  margin-right: 4px;
+}
+
 .Meaning__partOfSpeech {
-  font-size: 14px;
+  font-size: 16px;
   font-weight: bold;
   color: var(--font-color);
 }
