--- a/src/Results.css
+++ b/src/Results.css
@@ -3,8 +3,15 @@
   text-align: start;
 }
 
+.Results__word {
+  margin: 28px 0;
+}
+
 .Results h1 {
-  font-size: 28px;
+  font-size: 32px;
+  font-weight: bold;
+  margin: 0;
+  line-height: 1.2;
 }
 
 .Results h2 {
