--- a/src/Components/Antonyms.css
+++ b/src/Components/Antonyms.css
@@ -1,4 +1,4 @@
-.Synonyms {
+.Antonyms {
   display: inline;
   font-size: 16px;
   line-height: 1;
@@ -8,4 +8,11 @@
   margin: 0 8px 4px 0;
   border-radius: 20px;
   background-color: var(--light-background);
+}
+
+.Antonyms__title {
+  font-size: 14px;
+  font-weight: bold;
+  opacity: 70%;
+  margin-bottom: 4px;
 }
