--- a/src/Components/Meaning.css
+++ b/src/Components/Meaning.css
@@ -15,6 +15,10 @@
   color: var(--font-color);
 }
 
+.Meaning__sep {
+  opacity: 10%;
+}
+
 .Meaning__example {
   padding: 0 36px 6px;
   font-style: italic;
