--- a/src/Components/Synonyms.css
+++ b/src/Components/Synonyms.css
@@ -1,22 +1,18 @@
 .Synonyms {
-  display: inline;
-  font-size: 16px;
+  display: inline-block;
+  font-size: 14px;
   line-height: 1;
   border: 1px solid var(--font-color);
   color: var(--font-color);
-  padding: 8px 12px;
+  padding: 4px 12px;
   margin: 0 8px 4px 0;
   border-radius: 20px;
   background-color: var(--light-background);
 }
 
-.Synomyms__title {
+.Synonyms__title {
   font-size: 14px;
   font-weight: bold;
   opacity: 70%;
-  margin-bottom: 4px;
-}
-
-.Synonyms:hover {
-  cursor: none;
+  margin-right: 4px;
 }
