--- a/src/Components/Antonyms.css
+++ b/src/Components/Antonyms.css
@@ -10,6 +10,10 @@
   background-color: var(--light-background);
 }
 
+.Antonyms:hover {
+  cursor: pointer;
+}
+
 .Antonyms__title {
   font-size: 14px;
   font-weight: bold;
